# HexagonEX

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: configs.cmake  options.cmake
res/win/: win_res.rc
src/cpp/engine/private/hex/core/: hex.cpp
src/cpp/engine/private/hex/core/app/: Application.cpp
src/cpp/engine/private/hex/core/engine/: Engine.cpp
src/cpp/engine/private/hex/core/game/: Game.cpp
src/cpp/engine/private/hex/core/graphics/: GraphicsManager.cpp
src/cpp/engine/private/hex/core/utils/async/: BaseLock.cpp  Mutex.cpp  SpinLock.cpp
src/cpp/engine/private/hex/core/utils/ecs/: ESystem.cpp
src/cpp/engine/private/hex/core/utils/lng/: Enum.cpp
src/cpp/engine/private/hex/core/utils/memory/: MemoryManager.cpp
src/cpp/engine/private/hex/core/utils/metrics/: Log.cpp
src/cpp/engine/private/hex/ecs/: ECSEngine.cpp
src/cpp/engine/private/hex/ecs/events/: Event.cpp  EventsManager.cpp
src/cpp/engine/private/hex/ecs/systems/: System.cpp
src/cpp/engine/private/hex/ecs/types/: ecs_types.cpp
src/cpp/engine/private/hex/posix/utils/async/: PMutex.cpp
src/cpp/engine/private/hex/windows/app/: WinApp.cpp
src/cpp/engine/private/hex/windows/graphics/: WinGraphics.cpp
src/cpp/engine/private/hex/windows/utils/async/: WinMutex.cpp
src/cpp/engine/private/hex/windows/utils/metrics/: WinLog.cpp
src/cpp/engine/public/hex/: CMakeLists.txt
src/cpp/engine/public/hex/cmake/: configs.cmake
src/cpp/engine/public/hex/core/: CMakeLists.txt  hex.hpp
src/cpp/engine/public/hex/core/app/: Application.hpp  IApplication.hxx
src/cpp/engine/public/hex/core/configs/: hex_api.hpp  hex_assert.hpp  hex_atomic.hpp  hex_log.hpp  hex_map.hpp  hex_memory.hpp  hex_mutex.hpp  hex_numeric.hpp  hex_platform.hpp  hex_string.hpp  hex_thread.hpp  hex_vector.hpp
src/cpp/engine/public/hex/core/engine/: Engine.hpp  IEngine.hxx
src/cpp/engine/public/hex/core/game/: Game.hpp  IGame.hxx
src/cpp/engine/public/hex/core/graphics/: GraphicsManager.hpp  GraphicsSettings.hpp  IGraphics.hxx
src/cpp/engine/public/hex/core/utils/async/: BaseLock.hpp  ILock.hxx  IMutex.hxx  Mutex.hpp  SpinLock.hpp
src/cpp/engine/public/hex/core/utils/containers/: BitMap.hpp  BitVec.hpp
src/cpp/engine/public/hex/core/utils/ecs/: ESystem.hpp
src/cpp/engine/public/hex/core/utils/lng/: Enum.hpp
src/cpp/engine/public/hex/core/utils/memory/: MemoryManager.hpp
src/cpp/engine/public/hex/core/utils/metrics/: ILog.hxx  Log.hpp
src/cpp/engine/public/hex/core/utils/text/: StringUtil.hpp
src/cpp/engine/public/hex/ecs/: CMakeLists.txt  ECSEngine.hpp
src/cpp/engine/public/hex/ecs/events/: Event.hpp  EventsManager.hpp  IEvent.hxx
src/cpp/engine/public/hex/ecs/systems/: ISystem.hxx  System.hpp
src/cpp/engine/public/hex/ecs/types/: ecs_api.hpp  ecs_atomic.hpp  ecs_debug.hpp  ecs_map.hpp  ecs_memory.hpp  ecs_mutex.hpp  ecs_thread.hpp  ecs_types.hpp  ecs_vector.hpp
src/cpp/engine/public/hex/ecs/utils/: IDStorage.hpp
src/cpp/engine/public/hex/posix/utils/async/: PMutex.hpp
src/cpp/engine/public/hex/windows/: CMakeLists.txt
src/cpp/engine/public/hex/windows/app/: WinApp.hpp
src/cpp/engine/public/hex/windows/graphics/: WinGraphics.hpp
src/cpp/engine/public/hex/windows/utils/async/: WinMutex.hpp
src/cpp/engine/public/hex/windows/utils/metrics/: WinLog.hpp
src/cpp/game/private/hex/core/game/: HexGame.cpp
src/cpp/game/private/hex/windows/: main.cpp
src/cpp/game/public/hex/: CMakeLists.txt
src/cpp/game/public/hex/core/: CMakeLists.txt
src/cpp/game/public/hex/core/game/: HexGame.hpp
src/cpp/game/public/hex/windows/: CMakeLists.txt  main.hpp
